style.css
@font-face {
    font-family: 'main-font';
    src: url("/fonts/anticslab-regular-webfont.woff2") format("woff2"),
    url("/fonts/anticslab-regular-webfont.woff") format("woff");
}

:root {
    --background: #282a36;
    --start-screen-bg: #6273a4f8;
    --subtle: #6272a4;
    --pink: #ff79c6;
    --green: #50fa7b;
    --yellow: #f1fa8c;
    --blue: #8be9fd;
    --plain: #f8f8f2;

    --cell-size: 100px;
    --mark-size: calc(var(--cell-size) * 0.85);
}

*,
*::before,
*::after {
    box-sizing: border-box;
}

body {
    margin: 0;
    position: relative;
    font-family: "main-font", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    color: var(--yellow);
    font-size: 2rem;
}

.start-screen {
    position: absolute;
    background-color: var(--start-screen-bg);
    opacity: 1;
    inset: 0;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    gap: 5%;
    transition: 0.3s;
}

.text-display {
    white-space: pre;
    text-align: center;  
}

.hide {
    opacity: 0;
}

.character-select {
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 50px;
}

.char,
.one,
.two {
    width: var(--cell-size);
    height: var(--cell-size);
    display: flex;
    align-items: center;
    justify-content: center;
    border-radius: 10%;
    cursor: pointer;
}

.char:active {
    transform: scale(0.9);
}

.char.o::after {
    background-color: var(--start-screen-bg);
}

.char.x:hover {
    background-color: var(--pink);
}

.char.o:hover,
.char.o:hover:after {
    background-color: var(--green);
}

.hide {
    opacity: 0;
}

.winDisplay {
    position: absolute;
    top: 12%;
    left: 0;
    right: 0;
    margin-left: auto;
    margin-right: auto;
    text-align: center;
    width: min-content;
}

.winDisplay > div {
    display: flex;
    gap: 30px;
}

.winDisplay > div > button {
    font-family: inherit;
    appearance: none;
    border: none;
    box-sizing: border-box;
    width: 100px;
    background-color: var(--subtle);
    color: var(--yellow);
    border-radius: 10px;
    margin-top: 16px;
    letter-spacing: 1px;
    padding: 4px 20px;
    transition: 0.2s;
    cursor: pointer;
}

.winDisplay > div > button:hover {
    transform: scale(1.1);
}

.winDisplay > div > button:active {
    transform: scale(1);
}


.board {
    background-color: var(--background);
    height: 100vh;
    width: 100vw;
    display: flex;
    align-items: center;
    justify-content: center;
}

.cell-container {
    grid-template-columns: repeat(3, auto);
    position: relative;
    display: grid;
    justify-content: center;
    align-content: center;
    justify-items: center;
    align-items: center;
}

.cell {
    display: flex;
    justify-content: center;
    align-items: center;
    width: var(--cell-size);
    height: var(--cell-size);
    border: 1px solid var(--subtle);
    position: relative;
    cursor: pointer;
}

.cell:nth-child(-n + 3) {
    border-top: none;
}

.cell:nth-child(3n +1 ) {
    border-left: none;
}

.cell:nth-child(3n +3) {
    border-right: none;
}

.cell:nth-child(n - 6) {
    border-bottom: none;
}


.cell.x::before,
.cell.x::after,
.char.x::before,
.char.x::after {
    content: '';
    position: absolute;
    height: var(--mark-size);
    width: calc(var(--mark-size) * 0.1);
    background-color: var(--green);
}

.cell.x::before,
.char.x::before {
    transform: rotate(45deg);
}

.cell.x::after,
.char.x::after {
    transform: rotate(-45deg);
}

.cell.o::before,
.cell.o::after,
.char.o::before,
.char.o::after {
    content: '';
    position: absolute;
    border-radius: 50%;
}

.cell.o::before,
.char.o::before {
    height: var(--mark-size);
    width: var(--mark-size);
    background-color: var(--pink);
}

.cell.o::after,
.char.o::after {
    height: calc(var(--mark-size) * 0.8);
    width: calc(var(--mark-size) * 0.8);
    background-color: var(--background);
}

.board.x .cell:not(.x):not(.o):hover::before,
.board.x .cell:not(.x):not(.o):hover::after {
    content: '';
    position: absolute;
    height: var(--mark-size);
    width: calc(var(--mark-size) * 0.1);
    background-color: #50fa7a0a;
}

.board.x .cell:hover::before {
    transform: rotate(45deg);
}

.board.x .cell:hover::after {
    transform: rotate(-45deg);
}

.board.o .cell:not(.x):not(.o):hover::before,
.board.o .cell:not(.x):not(.o):hover::after {
    content: '';
    position: absolute;
    border-radius: 50%;
}

.board.o .cell:not(.x):not(.o):hover::before {
    height: var(--mark-size);
    width: var(--mark-size);
    background-color: #ff79c60a;
}

.board.o .cell:not(.x):not(.o):hover::after {
    height: calc(var(--mark-size) * 0.8);
    width: calc(var(--mark-size) * 0.8);
    background-color: var(--background);
}

.char.o::after {
    background-color: var(--start-screen-bg);
}

.cell-container::after {
    scale: 0;
    transition: scale 0.5s;
    transform-origin: top;
    content: '';
    position: absolute;
    background-color: var(--plain);
    width: 3px;
    border-radius: 10px;
    height: 100%;
}
.cell-container.win0::after {
    scale: 1;
    left: calc(var(--cell-size) / 2);
}

.cell-container.win1::after {
    scale: 1;
}

.cell-container.win2::after {
    transform-origin: top;
    scale: 1;
    right: calc(var(--cell-size) / 2);
}

.cell-container.rows::after {
    transform-origin: left;
    scale: 0;
    width: 100%;
    height: 4px;
}

.cell-container.win3::after {
    top: calc(var(--cell-size) / 2);
    scale: 1;
}

.cell-container.win4::after {
    scale: 1;
}

.cell-container.win5::after {
    bottom: calc(var(--cell-size) / 2);
    scale: 1;
    transform-origin: left;
}


.cell-container.win6::after {
    top: 20px;
    left: 20px;
    transform: rotate(45deg);
    scale: 1.2;
}

.cell-container.win7::after {
    bottom: 20px;
    left: 20px;
    transform: rotate(-45deg);
    scale: 1.2;
}

